Bug 294777 - Last Used label resets to Never after a minute
Summary: Last Used label resets to Never after a minute
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Control Module (other bugs)
Version First Reported In: 0.9
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-24 21:56 UTC by David E. Narvaez
Modified: 2012-02-24 22:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David E. Narvaez 2012-02-24 21:56:00 UTC
Version:           0.9 (using KDE 4.8.0) 
OS:                Linux

The text at the Last Used column of the list of items resets to "Never" after a minute of having the Control Module open.

Reproducible: Always

Steps to Reproduce:
1. Open the Control Module
2. Waite one minute

Actual Results:  
All texts inthe Last Used column reset to "Never"

Expected Results:  
Texts should reflect the last time the connection was used
Comment 1 Lamarque V. Souza 2012-02-24 22:28:15 UTC
Git commit e50b81c7d5c2f30b6aab3682d81e2b49c0c34013 by Lamarque V. Souza.
Committed on 24/02/2012 at 23:22.
Pushed by lvsouza into branch 'master'.

Fix "Last Used label resets to Never after a minute".
Thanks to David Narváez for pointing this problem out.

REVIEW: 104072

D  +0    -110  applet/nmConfig.ui
M  +1    -1    plasma_nm_version.h
M  +1    -1    settings/config/manageconnectionwidget.cpp

http://commits.kde.org/networkmanagement/e50b81c7d5c2f30b6aab3682d81e2b49c0c34013
Comment 2 Lamarque V. Souza 2012-02-24 22:28:20 UTC
Git commit e483e11b5cd585fcf236369f1cce21e5b44a73f1 by Lamarque V. Souza.
Committed on 24/02/2012 at 23:22.
Pushed by lvsouza into branch 'nm09'.

Fix "Last Used label resets to Never after a minute".
Thanks to David Narváez for pointing this problem out.

REVIEW: 104072

D  +0    -110  applet/nmConfig.ui
M  +1    -1    plasma_nm_version.h
M  +1    -1    settings/config/manageconnectionwidget.cpp

http://commits.kde.org/networkmanagement/e483e11b5cd585fcf236369f1cce21e5b44a73f1