Fix "Last Used label resets to Never after a minute". Thanks to David Narváez for pointing this problem out.

REVIEW: 104072
BUG: 294777