settings/config/manageconnectionwidget.cpp
@@ -775,7 +775,7 @@ void ManageConnectionWidget::updateLastUsed(QTreeWidget * list)
 {
     QTreeWidgetItemIterator it(list);
     while (*it) {
-        QDateTime lastUsed = (*it)->data(ConnectionLastUsedColumn, ConnectionLastUsedRole).toDateTime();
+        QDateTime lastUsed = (*it)->data(0, ConnectionLastUsedRole).toDateTime();
         (*it)->setText(ConnectionLastUsedColumn, formatDateRelative(lastUsed));
         ++it;
     }
